--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   o3:
     container_name: o3
-    image: openmrs/openmrs-reference-application-3-gateway:${TAG:-nightly}
+    image: openmrs/openmrs-reference-application-3-gateway:nightly
     depends_on:
       - o3-frontend
       - o3-backend
@@ -11,8 +11,8 @@ services:
       - "80:80"
     volumes:
       - ./config/o3/nginx.conf:/etc/nginx/nginx.conf
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    # extra_hosts:
+    #   - "host.docker.internal:host-gateway"
     # tty: true
     # stdin_open: true
     # entrypoint: sh
@@ -20,7 +20,7 @@ services:
   o3-frontend:
     container_name: o3-frontend
     hostname: frontend
-    image: openmrs/openmrs-reference-application-3-frontend:${TAG:-nightly}
+    image: openmrs/openmrs-reference-application-3-frontend:dev3
     environment:
       SPA_PATH: /openmrs/spa
       API_URL: /openmrs
@@ -28,11 +28,14 @@ services:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/"]
       timeout: 5s
-    
+    volumes:
+      - ./config/o3/importmap.json:/usr/share/nginx/html/importmap.json
+  
   o3-backend:
     container_name: o3-backend
     hostname: backend
-    image: openmrs/openmrs-reference-application-3-backend:${TAG:-nightly}
+    platform: linux/arm64/v8
+    image: openmrs/openmrs-reference-application-3-backend:dev3
     depends_on:
       - o3-db
     environment:
@@ -54,7 +57,9 @@ services:
   # MariaDB
   o3-db:
     container_name: o3-db
-    image: mariadb:10.8.2
+    hostname: o3-db
+    image: mariadb:latest
+    platform: linux/arm64/v8
     command: "mysqld --character-set-server=utf8 --collation-server=utf8_general_ci"
     environment:
       MYSQL_DATABASE: openmrs
