Development env setup fix

--- a/config/o3/nginx.conf
+++ b/config/o3/nginx.conf
@@ -24,9 +24,7 @@ http {
   }
 
   server {
-    listen       80;
-    server_name  tap-demo.openelisci.org;
-    
+    listen       80;    
 
     add_header X-XSS-Protection "1; mode=block";
     add_header Content-Security-Policy $csp_header;
@@ -75,7 +73,7 @@ http {
 
     location /openmrs/spa/ {
       proxy_pass http://frontend/;
-      proxy_redirect http://tap-demo.openelisci.org/ /openmrs/spa/;
+      proxy_redirect http://localhost/ /openmrs/spa/;
     }
 
     location /openmrs {
